spectec/test/elab/neg/parse-struct-no-fields.spectec
;; Struct type definition with no fields.

syntax foo = {}
